--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 ```sh
 CLIENT_ID=d5b8b20e472749048250d269983533d2
-REDIRECT_URL=http://localhost:54590/api/auth/authorize.html
+REDIRECT_URL=https://spotify-sdk-sample-try.web.app/api/auth/authorize.html
 ```
