--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,8 @@ dependencies:
   flutter:
     sdk: flutter
   logger: ^1.0.0
-  flutter_dotenv: ^4.0.0-nullsafety.0
+  # flutter_dotenv: ^4.0.0-nullsafety.0
+  flutter_dotenv: 3.1.0
   cupertino_icons: ^1.0.0
   spotify_sdk: ^2.1.0
 
